# tinynumpy

./: pyproject.toml  setup.py
.github/workflows/: publish-python-package.yml  python-package.yml
tinynumpy/: tinynumpy.py
